# karbo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ReleaseNotes.txt
include/: BinaryArray.hpp  BlockchainExplorerData.h  CMakeLists.txt  CryptoNote.h  CryptoTypes.h  IBlockchainExplorer.h  IDataBase.h  INode.h  IObservable.h  IReadBatch.h  IStreamSerializable.h  ITransaction.h  ITransfersContainer.h  ITransfersSynchronizer.h  IWallet.h  IWalletLegacy.h  IWriteBatch.h  android.h  json.hpp
src/: CMakeLists.txt  CheckpointsData.h  CryptoNoteConfig.h  karbo.rc  version.cmake  version.h.in
src/AddressGenerator/: vanitygen.cpp
src/BinaryInfo/: connectivity_tool.rc  daemon.rc  greenwallet.rc  miner.rc  optimizer.rc  simplewallet.rc  walletd.rc
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
src/Checkpoints/: Checkpoints.cpp  Checkpoints.h  CheckpointsData.h
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.cpp  BlockingQueue.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.cpp  FileMappedVector.cpp  FileMappedVector.h  FormatTools.cpp  FormatTools.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  JsonValue.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PasswordContainer.cpp  PasswordContainer.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  (+24 more)
src/ConnectivityTool/: ConnectivityTool.cpp
src/CryptoNoteCore/: Account.cpp  Account.h  AddBlockErrorCondition.cpp  AddBlockErrorCondition.h  AddBlockErrors.cpp  AddBlockErrors.h  BlobsCacheStorage.cpp  BlobsCacheStorage.h  BlockValidationErrors.cpp  BlockValidationErrors.h  BlockchainCache.cpp  BlockchainCache.h  BlockchainMessages.cpp  BlockchainMessages.h  BlockchainReadBatch.cpp  BlockchainReadBatch.h  BlockchainStorage.cpp  BlockchainStorage.h  BlockchainUtils.cpp  BlockchainUtils.h  BlockchainWriteBatch.cpp  BlockchainWriteBatch.h  CachedBlock.cpp  CachedBlock.h  CachedTransaction.cpp  CachedTransaction.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreErrors.cpp  CoreErrors.h  CoreStatistics.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  (+91 more)
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/GreenWallet/: AddressBook.cpp  AddressBook.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandImplementations.cpp  CommandImplementations.h  Commands.cpp  Fusion.cpp  GetInput.cpp  Menu.cpp  Open.cpp  Open.h  ParseArguments.cpp  Sync.cpp  Tools.cpp  Tools.h  Transfer.cpp  Transfer.h  Types.h  WalletConfig.h  ZedWallet.cpp  ZedWallet.h
src/HTTP/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
src/Miner/: BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerEvent.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/Mnemonics/: electrum-words.cpp  electrum-words.h
src/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/Optimizer/: Optimizer.cpp
src/P2p/: ConnectionContext.h  IP2pNodeInternal.cpp  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.cpp  P2pInterfaces.h  P2pNetworks.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h
src/PaymentGate/: NodeFactory.cpp  NodeFactory.h  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h  WalletServiceErrorCategory.cpp  WalletServiceErrorCategory.h
src/PaymentGateService/: ConfigurationManager.cpp  ConfigurationManager.h  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  RpcNodeConfiguration.cpp  RpcNodeConfiguration.h  main.cpp
src/Rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.cpp  HttpClient.h  HttpRootCerts.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp  RpcServerConfig.h
src/Serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  ISerializer.h  IStream.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryCommon.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.cpp  MemoryStream.h  SerializationOverloads.cpp  (+2 more)
tests/: Io.h  (+1 more)
(+334 files in other folders)
